<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    >

    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"

        />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_username"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_email"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_password"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_repassword"
        android:textSize="20sp"

        />


    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/sigup"
        android:textColor="@color/black"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/redirectSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signinCheck"
        android:layout_marginStart="80dp"
        />

</LinearLayout>