<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo"

        />



    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_btn01"
        android:fontFamily="@font/madimione"
        android:text="@string/sigin"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />

    



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_acc"
        android:layout_marginStart="150dp"
        android:layout_marginTop="200dp"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_btn01"
        android:fontFamily="@font/madimione"
        android:text="@string/sigup"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />




</LinearLayout>