<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".AdminLoginActivity">

    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"

        />

    <EditText
        android:id="@+id/txtAdminEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_email"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/txtAdminPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:hint="@string/enter_your_password"
        android:textSize="20sp"

        />



    <Button
        android:id="@+id/btnAdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        />

</LinearLayout>